<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android           ="http://schemas.android.com/apk/res/android"
    xmlns:tools             ="http://schemas.android.com/tools"
    android:layout_width    ="match_parent"
    android:layout_height   ="match_parent"
    android:orientation     ="vertical"
    tools:context           ="eu.mobile.hotelssbd.activitites.MakeReservationActivity">

    <LinearLayout
        android:layout_width    ="match_parent"
        android:layout_height   ="wrap_content"
        android:orientation     ="vertical">

        <RelativeLayout
            android:id              ="@+id/bar"
            android:layout_width    ="match_parent"
            android:layout_height   ="50dp"
            android:background      ="@color/colorPrimary">

            <TextView
                android:layout_width            ="match_parent"
                android:layout_height           ="wrap_content"
                android:layout_centerVertical   ="true"
                android:text                    ="@string/reservation_details"
                android:textColor               ="@android:color/white"
                android:textSize                ="20sp"
                android:paddingLeft             ="15dp"
                android:paddingRight            ="15dp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width        ="match_parent"
            android:layout_height       ="wrap_content"
            android:orientation         ="horizontal"
            android:paddingLeft         ="15dp"
            android:paddingRight        ="15dp"
            android:paddingTop          ="20dp"
            android:weightSum           ="2">

            <TextView
                android:layout_width    ="0dp"
                android:layout_height   ="wrap_content"
                android:layout_weight   ="1"
                android:text            ="@string/first_name"/>

            <EditText
                android:id              ="@+id/first_name_edt"
                android:layout_width    ="0dp"
                android:layout_height   ="wrap_content"
                android:layout_weight   ="1"
                android:inputType       ="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width        ="match_parent"
            android:layout_height       ="wrap_content"
            android:orientation         ="horizontal"
            android:paddingRight        ="15dp"
            android:paddingLeft         ="15dp"
            android:weightSum           ="2">

            <TextView
                android:layout_width    ="0dp"
                android:layout_height   ="wrap_content"
                android:layout_weight   ="1"
                android:text            ="@string/last_name"/>

            <EditText
                android:id              ="@+id/last_name_edt"
                android:layout_width    ="0dp"
                android:layout_height   ="wrap_content"
                android:layout_weight   ="1"
                android:inputType       ="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width        ="match_parent"
            android:layout_height       ="wrap_content"
            android:orientation         ="horizontal"
            android:paddingLeft         ="15dp"
            android:paddingRight        ="15dp"
            android:weightSum           ="2">

            <TextView
                android:layout_width    ="0dp"
                android:layout_height   ="wrap_content"
                android:layout_weight   ="1"
                android:text            ="@string/egn"/>

            <EditText
                android:id              ="@+id/egn_edt"
                android:layout_width    ="0dp"
                android:layout_height   ="wrap_content"
                android:layout_weight   ="1"
                android:inputType       ="number"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width        ="match_parent"
            android:layout_height       ="wrap_content"
            android:orientation         ="horizontal"
            android:paddingRight        ="15dp"
            android:paddingLeft         ="15dp"
            android:weightSum           ="2">

            <TextView
                android:layout_width    ="0dp"
                android:layout_height   ="wrap_content"
                android:layout_weight   ="1"
                android:text            ="@string/from"/>

            <EditText
                android:id                  ="@+id/from_date_edt"
                android:layout_width        ="0dp"
                android:layout_height       ="wrap_content"
                android:layout_weight       ="1"
                android:inputType           ="date"
                android:focusable           ="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width        ="match_parent"
            android:layout_height       ="wrap_content"
            android:orientation         ="horizontal"
            android:paddingRight        ="15dp"
            android:paddingLeft         ="15dp"
            android:weightSum           ="2">

            <TextView
                android:layout_width    ="0dp"
                android:layout_height   ="wrap_content"
                android:layout_weight   ="1"
                android:text            ="@string/to"/>

            <EditText
                android:id              ="@+id/to_date_edt"
                android:layout_width    ="0dp"
                android:layout_height   ="wrap_content"
                android:layout_weight   ="1"
                android:inputType       ="date"
                android:focusable       ="false"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id                          ="@+id/save_btn"
        android:layout_width                ="match_parent"
        android:layout_height               ="50dp"
        android:layout_alignParentBottom    ="true"
        android:background                  ="@color/colorPrimary"
        android:text                        ="Save"
        android:textColor                   ="@android:color/white"/>

</RelativeLayout>
